  See menu "File" --> "Global Preferences" --> tab "SQL formatting" --> "Column list split behavior"

Netezza SYNONYM support added and enhanced 
  Thanks to Richard Kooijman for the patch

New high definition icon
  Thanks to Richard Kooijman for the patch


Graph plugin: Added a 'NOT LIKE' operator to Query builder filter.

Bug fixes:

#1262 Error when viewing the content of a table of PostgreSQL database in Object tree.
  The error occurred when a table contained an OID.
 Thanks to Jjarmolowicz for the patch.

#1304 Saving script ruins greek words

Fix the problem with "Show foreign key references..." on a row with
  a raw type (BINARY, VARBINARY, (VAR)CHAR FOR BIT DATA, BLOB) primary-key.
 Thanks to Stefan Mueller for the patch

#1303 Close via session menu does NOT remove session tab

PostgreSQL sequences are now sorted
 Thanks to Krzysztof Szymko for the patch.

#1302 ObjectTree SEQUENCE parent node Details tab tries to fetch details of non-existing sequence

#1298 DROP TABLE IF EXISTS doubles VIEW content

#1297 Data Type Controls (max number of digits input - no error handling)

#1289 Connection Error Dialog does not show the actual JDBC error message emitted
  Thanks to Peter G. Horvath for the patch.

#1206 The workaround implemented lately has been replaced by a proper resolution
 Thanks to Krzysztof Szymko for the patch.

Postgres Plugin: Procedure sources are now shown with signature
  rather than only procedure's body code.
 Thanks to Krzysztof Szymko for the patch.


#1290 Bookmarks plugin: NPE Add empty bookmark --> Empty bookmarks are prevented
#1291 Bookmarks plugin: Add Bookmark dialog looks awfully
#1292 Bookmarks plugin: Edit bookmark is not refreshing User bookmarks tree


When menu File --> Global Preferences --> tab "Data Type Controls" --> "Show newlines as \n within cells"
 was activated newlines where replaced by /n instead of \n
 (mentioned in Bug #1005)
