@@ -90,6 +90,11 @@ Graph plugin: Added a 'NOT LIKE' operator to Query builder filter.
 
 Bug fixes:
 
+'Toggle minimize results' didn't work for horizontal SQL panel layout. (See menu File --> New Session Properties --> Tab General)
+
+MS Windows: List in 'Paste from History' dialog didn't get focused when opened.
+
+
 #1262 Error when viewing the content of a table of PostgreSQL database in Object tree.
   The error occurred when a table contained an OID.
  Thanks to Jjarmolowicz for the patch.
